--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600");
+@import url("../node_modules/font-awesome/css/font-awesome.min.css");
+@import url("../node_modules/bootstrap/dist/css/bootstrap.min.css");
+
+* {
+    font-family: 'Montserrat';
+    font-weight: 400;
+}
