Added css variables file for theme.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <header>
-  <h5> <i class="fa fa-lg fa-address-book"></i> <span> Manage Contacts Application </span></h5>
+  <div class="header-inner">
+    <div class="menu-button"><i class="fa fa-lg fa-bars"></i></div>
+    <h5> <i class="fa fa-lg fa-address-book"></i> <span> Manage Contacts Application </span></h5>
+  </div>
 </header>
 
 <router-outlet></router-outlet>
