--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,17 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600");
 @import url("../node_modules/font-awesome/css/font-awesome.min.css");
 @import url("../node_modules/bootstrap/dist/css/bootstrap.min.css");
+@import "styles-variables.scss";
 
 * {
     font-family: 'Montserrat';
     font-weight: 400;
+}
+
+html, body {
+    height: 100%;
+}
+
+body{
+    background-color: $light-gray;
 }
