added contacts route and actions.

--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,3 +1,22 @@
-<p>
-  contacts works!
-</p>
+<header class="page-header container-fluid">
+  <div class="row">
+    <div class="col-12 page-header-inner">
+        <div class="float-left page-title"> Contacts </div>
+        <div class="float-right actions-wrapper">
+          <span> <input type="text" input type="text" class="form-control" placeholder="Search"> </span>
+          <span><i class="fa fa-lg fa-plus"></i><span>Add</span></span>
+          <span><i class="fa fa-lg fa-pencil"></i><span>Edit</span></span>
+          <span><i class="fa fa-lg fa-trash"></i><span>Delete</span></span>
+          
+        </div>
+    </div>
+  </div>
+</header>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-3">
+      Hi
+    </div>
+  </div>
+</div>
