--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,7 @@ header {
     position: fixed;
     left: 0;
     right: 0;
+    top: 0;
 
     .header-inner{
         background-color: $primary-color;
