--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 
 * {
     font-family: 'Montserrat';
-    font-weight: 400;
+    font-weight: 500;
 }
 
 html, body {
@@ -14,5 +14,7 @@ html, body {
 }
 
 body{
+    padding-top: 60px;
     background-color: $light-gray;
+    font-size: 14px;
 }
