--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -13,10 +13,21 @@
   </div>
 </header>
 
-<div class="container-fluid">
+<div class="contacts-wrapper container-fluid">
   <div class="row">
-    <div class="col-3">
-      Hi
+    <div class="col-12 col-sm-4 col-lg-3 col-xl-2">
+      <div class="contact-card status-active">
+        <header><div><i class="fa fa-3x fa-user-o"></i></div><br>Ratnadeep Kharade Doe</header>
+        <div class="email"><i class="fa fa-lg fa-envelope"></i>Email</div>
+        <div class="email">john_doe@gmail.com</div>
+        <div class="phone"><i class="fa fa-lg fa-phone"></i>Phone</div>
+        <div class="phone">+91 484327394</div><hr>
+        <footer class="card-actions">
+            <div> <i class="fa fa-lg fa-pencil"></i> </div>
+            <div> <i class="fa fa-lg fa-trash"></i> </div>
+        </footer>
+      </div>
     </div>
+
   </div>
 </div>
