--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -25,3 +25,46 @@
         }
     }
 }
+
+.contacts-wrapper{
+    padding-top: 15px;
+    .contact-card{
+        text-align: center;
+        padding: 15px;
+        padding-right: 16px;
+        padding-left: 16px;
+        border-radius: 5px;
+        margin-bottom: 15px;
+        box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+
+        &.status-active{
+            border-top: 3px solid green;
+        }
+        &.status-inactive{
+            border-top: 3px solid red;
+        }
+
+        header{
+            color: #7953d2;
+            font-size: 16px;
+            font-weight: 600;
+            padding: 15px 0;
+        }
+
+        .email, .phone{
+            font-size: 13px;
+            font-weight: 600;
+            i{
+                margin-right: 10px;
+            }
+            margin-bottom: 10px;
+        }
+
+        .card-actions{
+            margin-top: 15px;
+            display: flex;
+            justify-content: space-around;
+            color: #4527a0;
+        }
+    }
+}
