--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,6 @@ html, body {
 
 body{
     padding-top: 60px;
-    background-color: $light-gray;
+    background-color: #fff;
     font-size: 14px;
 }
